applications/searxng/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    homelab.dohrm.fr/env: prod
    homelab.dohrm.fr/tier: app
